Fixed issue with whitespace under footer. Adjusted ShartAndPrintIcons distance from bottom of screen.

--- a/src/components/Layout/style.css
+++ b/src/components/Layout/style.css
@@ -28,7 +28,6 @@
 
 #footer {
   width: 100%;
-  height: var(--desktop-footer-height);
   background-color: var(--black-color);
   color: var(--white-color);
 }
@@ -50,10 +49,6 @@
     height: auto;
     padding: 0 var(--tablet-outer-margin);
   }
-
-  #footer {
-    height: var(--tablet-footer-height);
-  }
 }
 
 /* Initial Mobile Breakpoint */
@@ -70,9 +65,5 @@
   #section-container {
     padding: 0;
     margin: 0;
-  }
-
-  #footer {
-    height: var(--mobile-footer-height);
   }
 }
