--- a/src/components/ShareAndPrintIcons/style.css
+++ b/src/components/ShareAndPrintIcons/style.css
@@ -2,7 +2,7 @@
   /* display: flex;
   justify-content: flex-end; */
   position: absolute;
-  bottom: 125px;
+  bottom: 180px;
   right: calc(var(--desktop-outer-margin) + 15px);
 }
 
@@ -21,7 +21,7 @@
 /* Initial Tablet Breakpoint */
 @media screen and (max-width: 920px) {
   .share-print-icons {
-    bottom: 150px;
+    bottom: 260px;
     right: 50px;
   }
 
@@ -36,7 +36,7 @@
 /* Initial Mobile Breakpoint */
 @media screen and (max-width: 760px) {
   .share-print-icons {
-    bottom: 130px;
+    bottom: 225px;
     right: 10px;
   }
   .share-print-icons > img {
